--- a/front/login.html
+++ b/front/login.html
@@ -123,8 +123,10 @@
 				<div class="rightArea">
 					<div class="login fl">
 						<a href="login.html">登录</a>
-						<span class="sep">|</span>
-						<a href="register.html">注册</a>
+              <span class="sep">|</span>
+              <a href="register.html">注册买家</a>
+              <span class="sep">|</span>
+              <a href="registerseller.html">注册卖家</a>
 					</div>
 				</div>
 			</div>
