--- a/front/search.html
+++ b/front/search.html
@@ -62,7 +62,9 @@
 						<div class="login fl" id="iflogin">
 							<a href="login.html">登录</a>
 							<span class="sep">|</span>
-							<a href="register.html">注册</a>
+							<a href="register.html">注册买家</a>
+							<span class="sep">|</span>
+							<a href="registerseller.html">注册卖家</a>
 						</div>
 						<div class="buy_car fl">
 							<a onclick="shopcarjumpTo()">
