--- a/front/subClothes.html
+++ b/front/subClothes.html
@@ -35,9 +35,11 @@
 					</ul>
 					<div class="rightArea">
 						<div class="login fl" id="iflogin">
-							<a href="login.html">登陆</a>
+							<a href="login.html">登录</a>
 							<span class="sep">|</span>
-							<a href="register.html">注册</a>
+							<a href="register.html">注册买家</a>
+							<span class="sep">|</span>
+							<a href="registerseller.html">注册卖家</a>
 						</div>
 						<div class="buy_car fl">
 							<a onclick="shopcarjumpTo()">
