--- a/front/login.html
+++ b/front/login.html
@@ -104,7 +104,7 @@
 			<div class="comWidth2">
 				<ul class="leftArea">
 					<li>
-						<a href="#">玫瑰网：二手玫瑰，手有余香</a>
+						<a href="index.html">玫瑰网：二手玫瑰，手有余香</a>
 					</li>
 					<li>
 						<span class="sep">|</span>
@@ -122,7 +122,7 @@
 				</ul>
 				<div class="rightArea">
 					<div class="login fl">
-						<a href="login.html">登录</a>
+						  <a href="login.html">登录</a>
               <span class="sep">|</span>
               <a href="register.html">注册买家</a>
               <span class="sep">|</span>
