--- a/front/registerseller.html
+++ b/front/registerseller.html
@@ -121,9 +121,11 @@
 					</ul>
 					<div class="rightArea">
 						<div class="login fl">
-							<a href="login.html">登陆</a>
-							<span class="sep">|</span>
-							<a href="register.html">注册</a>
+							<a href="login.html">登录</a>
+              <span class="sep">|</span>
+              <a href="register.html">注册买家</a>
+              <span class="sep">|</span>
+              <a href="registerseller.html">注册卖家</a>
 						</div>
 					</div>
 				</div>
